fix: fixed inference server addresses

--- a/backend-dotnet/CarSurveillance.Server/appsettings.json
+++ b/backend-dotnet/CarSurveillance.Server/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "DataOptions": {
     "DataPath": "/data"
+  },
+  "ModelInferenceOptions": {
+    "ServerAddress": "http://carsurveillance.modelsinference:8000"
   }
 }
