--- a/backend-dotnet/CarSurveillance.Server/appsettings.Development.json
+++ b/backend-dotnet/CarSurveillance.Server/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "DataOptions": {
     "DataPath": "Data"
+  },
+  "ModelInferenceOptions": {
+    "ServerAddress": "http://127.0.0.1:8000"
   }
 }
