feat: added hosted service for images processing call

--- a/backend-dotnet/CarSurveillance.Server/appsettings.Development.json
+++ b/backend-dotnet/CarSurveillance.Server/appsettings.Development.json
@@ -6,9 +6,15 @@
     }
   },
   "DataOptions": {
-    "DataPath": "Data"
+    "DataPath": "Data",
+    "DataRawRelativePath": "raw",
+    "DataCropsRelativePath": "crops"
   },
   "ModelInferenceOptions": {
     "ServerAddress": "http://127.0.0.1:8000"
+  },
+  "DataProcessingOptions": {
+    "UploadingHourStart": 8,
+    "UploadingHourEnd": 19
   }
 }
