--- a/backend-dotnet/CarSurveillance.Server/appsettings.json
+++ b/backend-dotnet/CarSurveillance.Server/appsettings.json
@@ -7,9 +7,15 @@
   },
   "AllowedHosts": "*",
   "DataOptions": {
-    "DataPath": "/data"
+    "DataPath": "/data",
+    "DataRawRelativePath": "raw",
+    "DataCropsRelativePath": "crops"
   },
   "ModelInferenceOptions": {
     "ServerAddress": "http://carsurveillance.modelsinference:8000"
+  },
+  "DataProcessingOptions": {
+    "UploadingHourStart": 8,
+    "UploadingHourEnd": 19
   }
 }
