--- a/compose.yaml
+++ b/compose.yaml
@@ -11,7 +11,10 @@
     volumes:
       - /media/sf_SharedWithUbuntu/CarSurveillanceData:/data
     depends_on:
-      - db
+      db:
+        condition: service_started
+      carsurveillance.modelsinference:
+        condition: service_healthy
 
   carsurveillance.modelsinference:
     build:
@@ -21,6 +24,12 @@
       - "8000:8000"
     volumes:
       - /media/sf_SharedWithUbuntu/CarSurveillanceData:/data
+    healthcheck:
+      test: ["CMD", "python3", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
+      start_period: 5s
 
   db:
     image: postgres:16
