fix: fixed working with local time

--- a/backend-dotnet/CarSurveillance.Server/appsettings.json
+++ b/backend-dotnet/CarSurveillance.Server/appsettings.json
@@ -16,6 +16,7 @@
   },
   "DataProcessingOptions": {
     "UploadingHourStart": 8,
-    "UploadingHourEnd": 19
+    "UploadingHourEnd": 19,
+    "TimeZone": "Europe/Saratov"
   }
 }
