feat: added weather service and complete pipeline

--- a/backend-dotnet/CarSurveillance.Server/appsettings.Development.json
+++ b/backend-dotnet/CarSurveillance.Server/appsettings.Development.json
@@ -8,7 +8,8 @@
   "DataOptions": {
     "DataPath": "Data",
     "DataRawRelativePath": "raw",
-    "DataCropsRelativePath": "crops"
+    "DataCropsRelativePath": "crops",
+    "DataResultRelativePath": "recognition"
   },
   "ModelInferenceOptions": {
     "ServerAddress": "http://127.0.0.1:8000"
