--- a/backend-dotnet/CarSurveillance.Server/appsettings.json
+++ b/backend-dotnet/CarSurveillance.Server/appsettings.json
@@ -6,10 +6,14 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=CarSurveillanceDatabase;Username=postgres;Password=123456"
+  },
   "DataOptions": {
     "DataPath": "/data",
     "DataRawRelativePath": "raw",
-    "DataCropsRelativePath": "crops"
+    "DataCropsRelativePath": "crops",
+    "DataResultRelativePath": "recognition"
   },
   "ModelInferenceOptions": {
     "ServerAddress": "http://carsurveillance.modelsinference:8000"
